fix header on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -252,6 +252,12 @@ a.dow-menu {
   margin-top: 100px;
 }
 
+@media screen and (max-width: 1000px) {
+  .d-header .title {
+    margin-left: 0px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .list-controls:after {
     margin-top: -170px;
